# src/routes/usuarioRoutes.js
@@ -7,7 +7,7 @@ router.post("/usuario/", controller.registerNewUsuario);
 router.post("/login", controller.login)
 router.get("/usuarios",auth, controller.todosUsuarios)
 router.get("/lojas",auth, controller.findAllLojas);
-router.patch("/alterar/:id",auth, controller.alterarUsuario);
-router.delete("/deletar/:id", controller.deletarUsuario);
+router.patch("/usuario/:id",auth, controller.alterarUsuario);
+router.delete("/usuario/:id", controller.deletarUsuario);
 
 module.exports = router;
